--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             width:300%;
             bottom:0;
             background: -webkit-linear-gradient(left, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%);
+            background: -ms-linear-gradient(left, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%);
             background: -moz-linear-gradient(left, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%);
             z-index: 1;
         }
