Added top and bottom modes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             font: 400 16px/1.667 "Roboto",sans-serif;
             color: #555;
             line-height: 28px;
+            user-select: none;
+            -webkit-user-select: none;
+            -webkit-tap-highlight-color:  transparent;
         }
         h1{
             font-weight: 200;
@@ -122,7 +125,7 @@
 
         <h1>Check out mah flaps!</h1>
 
-        Swipe in from the left or right to test them out. (Click-drag on a desktop, or click the open flap buttons above)
+        Swipe in from a side test them out. (Click-drag on a desktop, or click the open flap buttons above)
     </section>
 </body>
 </html>
