Fixed styling bug

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             -o-perspective: 1000px;
             perspective: 1000px;
             position: absolute;
+            top:0;
+            left:0;
+            right:0;
+            bottom:0;
         }
         h1{
             font-weight: 200;
