--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             text-align: center;
             line-height: 40px;
             padding:20px;
+            padding-bottom: 100px; /* Fix for 3d rotation text-shadow cut-off issue */
         }
         .main h1{
             font-size: 40px;
@@ -83,6 +84,7 @@
         .openFlap{
             vertical-align: middle;
             position: fixed;
+            z-index: 3;
             top:10px;
             width: 150px;
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
@@ -131,9 +133,9 @@
 <body>
     <div class="wrapper">
     <a href="https://github.com/KoryNunn/flap"><img style="position: absolute; top: 0; right: 0; border: 0; z-index:2;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <button class="openFlap left">Open Left Flap</button>
+    <button class="openFlap right">Open Right Flap</button>
     <section class="main">
-        <button class="openFlap left">Open Left Flap</button>
-        <button class="openFlap right">Open Right Flap</button>
         <h1>Flap.js</h1>
 
         A tiny module for creating android-like swipe-from-the-side menus.
