--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             left:0;
             right:0;
             bottom:0;
+            overflow: hidden;
         }
         h1{
             font-weight: 200;
